# property-based-testing

./: .gitignore  README.md
pbt-haskell/: pbt-examples.cabal  stack.yaml
pbt-haskell/app/: Main.hs
pbt-haskell/src/: IoSample.hs  Scoreboard.hs  ScoreboardApp.hs
pbt-haskell/test/: FizzBuzzSpec.hs  ReverseSpec.hs  ScoreboardAppSpec.hs  ScoreboardSpec.hs
pbt-java/: build.gradle
pbt-java/blog-series/: 1_intro.md  2_properties.md  3_jqwik.md  4_shrinking.md  5_patterns.md  6_stateful_testing.md  6_tdd.md  7_tdd.md  how_to_specify_it_in_java.md  solitaire.md
pbt-java/gradle/wrapper/: gradle-wrapper.properties
pbt-java/src/test/java/how_to_specify_it/bst/: BST.java  BSTUtils.java  BSTValidity.java  BST_Properties.java  BST_Tests.java  TreeMap_Properties.java
pbt-java/src/test/java/junitquickcheck/: JupiterAndQuickcheckTests.java  JupiterAndVintageTests.java  SomeProperties.java
pbt-java/src/test/java/pbt/cards/: Hand.java  PlayingCard.java  PokerProperties.java  Rank.java  Suit.java
pbt-java/src/test/java/pbt/co2budget/: CO2Budget.java  CO2BudgetSpec.java  Readme.md
pbt-java/src/test/java/pbt/demo/: ConstrainingValuesProperties.java  Demo1Properties.java  Demo2Properties.java
pbt-java/src/test/java/pbt/demos/: ConstrainingValuesExamples.java  ConstrainingValuesProperties.java  Demo1Properties.java  ExhaustiveGenerationExamples.java  FibonacciProperties.java  IntegerGeneratorsExamples.java  InvolvedShrinkingExamples.java  ListReverseProperties.java  (+6 more)
pbt-java/src/test/java/quicktheories/: SomeTests.java
pbt-java/src/test/resources/: jqwik.properties
(+86 files in other folders)
