name:                pbt-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jlink/property-based-testing
author:              Johannes Link
maintainer:          business@johanneslink.net
copyright:           2017 Johannes Link
category:            command-line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IoSample
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pbt-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pbt-examples
  default-language:    Haskell2010

test-suite scoreboard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ReverseSpec
  -- other-modules:       IoSampleSpec, QuickCheckSpec
  build-depends:       base
                     , pbt-examples
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jlink/property-based-testing
